# gdswell

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: 01-getting_started.py  02-ports.py  03-transitions.py  04-cross_sections.py  05-netlist_hierarchy.py  06-parallel_advantage.py  07-text_benchmark.py  08-complex_circuit.py  09-partial_components.py  10-cell_sections.py  11-routing.py  12-smart_layers.py  13-caching_internals.py  14-parallelism.py  15-stackup.py  index.md  myst.yml
src/gdswell/: __init__.py  cache.py  cell.py  config.py  cross_section.py  decorator.py  future_cell.py  (+12 more)
tests/: test_async.py  test_bend_clipped.py  test_cache_dependencies.py  test_cell.py  test_cell_copy_unique.py  test_cell_freeze.py  test_cell_section_cache.py  test_circle.py  test_cross_section_connectivity.py  test_decorator.py  test_disk_cache.py  test_editable_hashing.py  test_freeze_validation.py  test_frozen_enforcement.py  test_hashing_partial.py  test_hashing_refinement.py  test_image_export.py  test_labels.py  test_layer_bbox.py  test_layer_dsl.py  test_layer_ops.py  test_length_info.py  test_module_ambiguity.py  test_netlist.py  test_netlist_hierarchical.py  test_netlist_validation.py  test_periodic_cells.py  test_ports.py  test_read_gds.py  test_rectangle.py  test_region_insertion.py  test_rotation_restriction.py  test_route_balanced.py  test_route_manhattan.py  test_routing_caching.py  test_routing_cell_sections.py  test_routing_improved.py  test_source_invalidation.py  test_stackup.py  test_stats.py  (+7 more)
(+9 files in other folders)
